新增自动部署脚本

--- a/.env.production
+++ b/.env.production
@@ -1,6 +1,18 @@
-ENV = 'production'
+NODE_ENV = 'production'
 VUE_APP_NAME = '应用名称'
 VUE_APP_BASE_URL = '后端接口地址'
 VUE_APP_STATIC_URL = '后端静态资源地址'
 VUE_APP_WX_CONFIG_URL = '微信SDK配置地址'
 VUE_APP_SERVER_ENV = '服务端环境标识'
+
+VUE_APP_REMOTE_HOST = ''
+VUE_APP_REMOTE_PORT = ''
+VUE_APP_REMOTE_USER = ''
+VUE_APP_REMOTE_PASS = ''
+VUE_APP_REMOTE_PATH = ''
+
+VUE_APP_OSS_PATH = ''
+VUE_APP_OSS_KEY = ''
+VUE_APP_OSS_SECRET = ''
+VUE_APP_OSS_REGION = ''
+VUE_APP_OSS_BUCKET = ''
