--- a/.env.development
+++ b/.env.development
@@ -1,6 +1,7 @@
 NODE_ENV = 'development'
 VUE_APP_HOST = 'localhost'
 VUE_APP_PORT = 9820
+VUE_APP_DOMAIN = 应用部署域名
 VUE_APP_NAME = '应用名称'
 VUE_APP_BASE_URL = '后端接口地址'
 VUE_APP_STATIC_URL = '后端静态资源地址'
