--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "lbd-wx-sdk": "^1.0.5",
     "qrcodejs2": "^0.0.2",
     "vant": "^2.2.13-beta.0",
+    "vconsole": "^3.3.4",
     "vue": "^2.6.11",
     "vue-router": "^3.1.6",
     "vuex": "^3.1.3"
