--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "alloyfinger": "^0.1.16",
     "castle-haozijunqaq-utils": "^2.0.4",
     "core-js": "^3.6.4",
+    "exif-js": "^2.3.0",
     "fastclick": "^1.0.6",
     "lbd-oss-sdk": "^1.0.4",
     "lbd-wx-sdk": "^1.0.5",
