--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "fastclick": "^1.0.6",
     "lbd-oss-sdk": "^1.0.4",
     "lbd-wx-sdk": "^1.0.5",
+    "normalize.css": "^8.0.1",
     "qrcodejs2": "^0.0.2",
     "vant": "^2.2.13-beta.0",
     "vconsole": "^3.3.4",
