--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "alloyfinger": "^0.1.16",
+    "animate.css": "^4.1.1",
     "castle-haozijunqaq-utils": "^2.0.4",
     "core-js": "^3.6.4",
     "exif-js": "^2.3.0",
