--- a/package.json
+++ b/package.json
@@ -10,14 +10,13 @@
     "publish:oss": "vue-cli-service build --publish --oss"
   },
   "dependencies": {
-    "alloyfinger": "^0.1.16",
     "animate.css": "^4.1.1",
     "castle-haozijunqaq-utils": "^2.0.4",
     "core-js": "^3.6.4",
     "exif-js": "^2.3.0",
     "fastclick": "^1.0.6",
     "lbd-oss-sdk": "^1.0.4",
-    "lbd-ui": "^1.4.2",
+    "lbd-ui": "^1.5.0",
     "lbd-wx-sdk": "^1.0.5",
     "normalize.css": "^8.0.1",
     "qrcodejs2": "^0.0.2",
@@ -33,8 +32,8 @@
     "@vue/cli-plugin-vuex": "~4.3.0",
     "@vue/cli-service": "~4.3.0",
     "babel-plugin-import": "^1.13.0",
-    "node-sass": "^4.12.0",
-    "sass-loader": "^8.0.2",
+    "less": "^3.12.2",
+    "less-loader": "^7.1.0",
     "style-resources-loader": "^1.3.2",
     "vue-cli-plugin-style-resources-loader": "~0.1.4",
     "vue-template-compiler": "^2.6.11",
