--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "babel-plugin-import": "^1.13.0",
     "less": "^3.12.2",
     "less-loader": "^7.1.0",
+    "postcss-px-to-viewport": "^1.1.1",
     "style-resources-loader": "^1.3.2",
     "vue-cli-plugin-style-resources-loader": "~0.1.4",
     "vue-template-compiler": "^2.6.11",
